--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
+:root {
+    --bkg-text-color: rgba(245, 245, 245, 0.734);
+}
+
 * {
     font-family: 'Urbanist', sans-serif;
 }
+
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
+}
+.grid-content {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 300px minmax(300px, 1fr);
+}
+
+/* .grid-content > * {
+    border: 1px solid #000;
+} */
+
+.banner {
+    background-image: url(phil-lev-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50%;
+    background-color: var(--bkg-text-color);
+    width: 100%;
+    padding: 10px 0px;
+    gap: 1rem;
+    font-size: 2rem;
+}
+
+.img-credit {
+    margin-top: auto;
+    margin-bottom: 1rem;
+    background-color: var(--bkg-text-color);
+    text-align: center;
+}
+
+a {
+    color: black;
+}
+
